<?xml version="1.0"?>
<package>
  <name>teleop_twist_keyboard_airsim</name>
  <version>1.0.0</version>
  <description>Generic keyboard teleop for AirSim multirotor.</description>

  <maintainer email="kanishk.vishwa2001@gmail.com">Kanishk Vishwakarma</maintainer>

  <license>BSD</license>


  <author>Kanishk Vishwakarma</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>airsim_ros_pkgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
